[project]
name = "qbs"
version = "1.0.0"  # This version doesn't really matter but it's mandatory
description = "Modern build tool for software projects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mike>=2.1.3",
    "mkdocs-awesome-pages-plugin>=2.9.3",
    "mkdocs-git-authors-plugin>=0.9.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-material[imaging]>=9.5.44",
    "mkdocs-obsidian-bridge>=1.1.1",
    "mkdocs-rss-plugin>=1.16.0",
]

[project.urls]
Homepage = "https://qbs.io"
Issues = "https://bugreports.qt.io/projects/QBS/issues/"
Repository = "https://github.com/qbs/qbs.git"
